--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-bootstrap": "^1.0.0-beta.10",
     "react-dom": "^16.8.6",
     "react-icons": "^3.7.0",
+    "react-input-mask": "^2.0.4",
     "react-notifications": "^1.4.3",
     "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.1",
